<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close_button_alt">Close</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="flash_button_alt">Flash mode</string>

    <string name="capture_mode_photo">Photo</string>
    <string name="capture_mode_video">Video</string>

    <string name="capture_photo_preview_alt">Photo preview</string>
    <string name="capture_file_name_hint">File name</string>
    <string name="capture_description_hint">Add description</string>
    <string name="capture_delete_photo_alt">Delete photo</string>
    <string name="capture_save_button">Save</string>
    <string name="capture_file_name_invalid_chars">File name can\'t contain any of the following characters: ?:"*|/\\&lt;&gt;</string>
    <string name="capture_file_name_empty">File name can\'t be empty.</string>

    <string name="capture_nav_save_title">Preview</string>

    <string name="camera_flash_auto">Auto</string>
    <string name="camera_flash_on">On</string>
    <string name="camera_flash_off">Off</string>

    <string name="capture_permissions_rationale">@string/capture_failure_permissions</string>
    <string name="capture_failure_permissions">To capture media, turn on Camera and Microphone permissions.</string>
    <string name="mode_change_title">Alert</string>
    <string name="mode_change_subtitle">If you wish to change the mode, your already captured assets will be discarded. Do you wish to proceed?</string>
    <string name="mode_change_confirmation_negative">Later</string>
    <string name="mode_change_confirmation_positive">Yes</string>

    <string name="discard_title">Discard photos?</string>
    <string name="discard_subtitle">queued photos will be discarded if you exit.</string>
    <string name="discard_confirmation_negative">Cancel</string>
    <string name="discard_confirmation_positive">Discard</string>
</resources>
