<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/flash_mode_auto"
        style="@style/Widget.Alfresco.Camera.Menu.Button"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_flash_auto"
        app:icon="@drawable/ic_flash_auto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/flash_mode_on"
        style="@style/Widget.Alfresco.Camera.Menu.Button"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_flash_on"
        app:icon="@drawable/ic_flash_on" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/flash_mode_off"
        style="@style/Widget.Alfresco.Camera.Menu.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_flash_off"
        app:icon="@drawable/ic_flash_off" />

</merge>
