<?xml version="1.0" encoding="utf-8"?>
<com.alfresco.capture.CameraLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/preview_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fillCenter" />

        <TextView
            android:id="@+id/message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/focus_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_focus_marks"
            tools:ignore="ContentDescription" />

        <com.alfresco.capture.FlashMenu
            android:id="@+id/flash_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/bg_camera_btn"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/top_bar">

        <!-- Can't use Widget.AppCompat.ImageButton style because icon is already tinted. -->
        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_camera_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <ImageButton
            android:id="@+id/flash_button"
            style="@style/Widget.Alfresco.Camera.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/flash_button_alt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_flash_auto" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/zoom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp">

        <TextView
            android:id="@+id/zoom_text"
            style="@style/Widget.Alfresco.Camera.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:minWidth="40dp"
            android:paddingHorizontal="10dp"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shutter_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:padding="12dp">

        <ImageButton
            android:id="@+id/shutter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_shutter"
            android:contentDescription="@string/capture_button_alt"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/camera_switch_button"
            style="@style/Widget.Alfresco.Camera.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/switch_camera_button_alt"
            app:layout_constraintBottom_toBottomOf="@id/shutter_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/shutter_button"
            app:srcCompat="@drawable/ic_switch" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:visibility="gone">

        <Button
            style="@style/Widget.Alfresco.Camera.Button"
            android:id="@+id/photo_mode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            style="@style/Widget.Alfresco.Camera.Button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="Video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/photo_mode"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.alfresco.capture.CameraLayout>
